footer gap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ font-family: 'Roboto', sans-serif;
 body {
     color: dimgrey;
     background-color: rgb(73, 172, 172);
+    line-height: 1 !important;
 }
 
 h1 {
